--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -44774,20 +44774,30 @@ Since caches are essentially key-value stores, each invocation of a cached metho
 to be translated into a suitable key for cache access. Out of the box, the caching
 abstraction uses a simple `KeyGenerator` based on the following algorithm:
 
-* If no params are given, return 0.
+* If no params are given, return `SimpleKey.EMPTY`.
 * If only one param is given, return that instance.
-* If more the one param is given, return a key computed from the hashes of all parameters.
+* If more the one param is given, return a `SimpleKey` containing all parameters.
 
-This approach works well for objects with __natural keys__ as long as the `hashCode()`
-reflects that. If that is not the case then for distributed or persistent environments,
-the strategy needs to be changed as the objects hashCode is not preserved. In fact,
-depending on the JVM implementation or running conditions, the same hashCode can be
-reused for different objects, in the same VM instance.
+This approach works well for most use-cases; As long as parameters have __natural keys__
+and implement valid `hashCode()` and `equals()` methods. If that is not the case the the
+strategy needs to be changed.
 
 To provide a different __default__ key generator, one needs to implement the
 `org.springframework.cache.KeyGenerator` interface. Once configured, the generator will
 be used for each declaration that does not specify its own key generation strategy (see
 below).
+
+
+[NOTE]
+====
+The default key generation strategy changed with the release of Spring 4.0. Earlier
+versions of Spring used a key generation strategy that only considered the `hashCode()`
+of parameters and not `equals()`, this often caused unexpected key collisions (see
+https://jira.springsource.org/browse/SPR-10237[SPR-10237] for background).
+
+If you want to use the previous key generator, you can use the
+`org.springframework.cache.interceptor.DefaultKeyGenerator` class.
+====
 
 
 [[cache-annotations-cacheable-key]]
@@ -44855,9 +44865,9 @@ only if the argument `name` has a length shorter then 32:
 ----
 
 In addition the `conditional` parameter, the `unless` parameter can be used to veto the
-adding of a value to the cache. Unlike `conditional`, `unless` `SpEL` expressions are
-evalulated __after__ the method has been called. Expanding on the previous example -
-perhaps we only want to cache paperback books:
+adding of a value to the cache. Unlike `conditional`, `unless` expressions are evaluated
+__after__ the method has been called. Expanding on the previous example - perhaps we
+only want to cache paperback books:
 
 [source,java,indent=0]
 [subs="verbatim,quotes"]
