--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -745,33 +745,130 @@ in the public domain for alternative approaches, and your mileage may vary depen
 the exact version and feature set of the container.
 
 
+
+
+
 [[spring-whats-new]]
-= What's New in Spring 4
+= What's New in Spring Framework 4
 
 [[new-in-4.0]]
-== What's New in Spring 4.0
+== What's New in Spring Framework 4.0
+The Spring Framework was first released in 2004, since then there have been only a
+few major revisions: Spring 2.0 provided cleaner XML support and improved AOP; Spring 2.5
+embraced annotation-driven configuration; Spring 3.0 added Java 5 features, such as
+generics and java-based `@Configuration`.
 
+Version 4.0 is the latest major release of the Spring Framework and the first to fully
+support Java 8 features. You can still use Spring with older versions of Java, however,
+the minimum requirement has now been raised to Java SE 6. We have also taken the
+opportunity of a major release to remove many deprecated classes and methods from the
+previous version.
+
+
+
+
+=== Improved Getting Started Experience
+The new http://spring.io[spring.io] website provides whole series of series of
+http://spring.io/guides["Getting Started"] guides to help you learn Spring. You
+can read more about the guides in the <<overview-getting-started-with-spring>> section
+in this document. The new website also provides a comprehensive overview of the many
+additional projects that are released under the Spring umbrella.
+
+If you are a Maven user you may also be interested in the helpful
+<<overview-maven-bom,bill of materials>> POM file that is now published with each Spring
+Framework release.
+
+
+
+
+=== Removed Deprecated Packages and Methods
+All deprecated packages, and many deprecated classes and methods have been removed with
+version 4.0. If you are upgrading from a previous release of Spring, you should ensure
+that you have fixed any deprecated calls that you were making.
+
+For a complete set of changes, check out the
+http://docs.spring.io/spring-framework/docs/3.2.4.RELEASE_to_4.0.0.RELEASE/[API
+Differences Report].
+
+
+
+
+=== Java 8
+Spring Framework 4.0 provides support for several Java 8 features. You can make use of
+lambda expressions and method references with Spring's callback interfaces. There is
+first class support for `java.time` (http://jcp.org/en/jsr/detail?id=310[JSR-310]) and
+several existing annotations have been retrofitted as `@Repeatable`. You can also use
+Java 8's parameter name discovery as an alternative to compiling your code with debug
+information enabled.
+
+Spring remains compatible with older versions of Java; 6.0 and above are fully
+supported.
+
+
+
+
+=== WebSocket Support
+The new `spring-websocket` module provide first class support for WebSockets
+(http://tools.ietf.org/html/rfc6455[RFC 6455]). Spring offers both low-level support for
+the WebSocket protocol (including http://jcp.org/en/jsr/detail?id=356[JSR-356]) as well
+as a much higher-level general __web messaging__ programming model, complete with STOMP
+fallback support.
+
+The new `@MessageMapping` annotation allows you to easily integrate messaging into your
+existing Spring MVC `@Controller` classes.
+
+__TODO: Rossen to review and add links__
+
+
+
+
+=== Core Container Improvements
+There have been several general improvements to the core IoC container:
+
+* Spring now treats __generic types__ as a form of __qualifier__ when injecting Beans. For
+  example, if you are using a Spring Data `Repository` you can now easily inject specific
+  implementations: `@Autowired Repository<Customer> customerRepository`.
+* If use Spring's meta-annotation support, you can now develop custom annotations that
+  <<beans-meta-annotations,expose specific attributes from the source annotation>>.
+* Beans can now be `Ordered` when they are injected into lists and arrays. Both the
+  `@Ordered` annotation and `Ordered` interface are supported.
+* A generalized model for <<beans-java-conditional,conditionally loading beans>> has been
+  added via the `@Conditional` annotation. This is similar to `@Profile` but allow
+  user-defined strategies to be developed.
+* Proxy classes no longer require a default constructor. Support is provided via the
+  http://code.google.com/p/objenesis/[objenesis] library which is now packaged __inline__
+  and shipped with Spring.
+* The `@Lazy` annotation can now be used on injection points, as well as `@Bean`
+  definitions.
+* The <<beans-java-bean-description,`@Description` annotation has been added>> for
+  developers using Java-based configuration.
+
+
+
+
+=== Web Improvements
+Deployment to Servlet 2.5 servers remains an option, but Spring Framework 4.0 is now
+focused primarily on Servlet 3.0+ environments. If you are using __Spring Test MVC__ you
+will need to ensure that a Servlet 3.0 compatible JAR is in your __test classpath__.
+
+In addition to the WebSocket support mentioned earlier, the following general improvements
+have been made to Spring's Web modules:
+
+* You can use <<mvc-ann-restcontroller,the new `@RestController` annotation>> with Spring
+  MVC applications, removing the need to add `@ResponseBody` to each of your
+  `@RequestMapping` methods.
+* The `AsyncRestTemplate` class has been added, <<rest-async-resttemplate,allowing
+  non-blocking asynchronous support>> when developing REST clients.
+* Spring now offers comprehensive timezone support when developing Spring MVC
+  applications.
+
+
+=== Other
 TODO
 
-* the new spring.io site and getting started <<overview-getting-started-with-spring>>
-* websockets
-* generic injection
-* removed deprecation
-* bill of materials POM <<overview-maven-bom>>
-* java 8 (@Repeatable, date time)
-* messaging
-* meta-annotation overrides <<beans-meta-annotations>>
-* proxy without default constructor
-* async rest <<rest-async-resttemplate>>
-* @Conditional <<beans-java-conditional>>
-* @RestController <<mvc-ann-restcontroller>>
-* @Description annotation <<beans-java-bean-description>>
-* Timezone support in MVC
 * Java EE updates
 * Groovy bean builds
-* ordered list/arry injection with @Autowired (@Order on each element bean)
-* Lazy resolution of proxies driven by @Lay on injection point
-* Attribute override with composable annotations
+* Minimum versions
 * scripting JRuby 1.5 + Groovy 1.8 (possibly add in migration guide)
 
 
