--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -196,11 +196,6 @@ The __Web-Servlet__ module contains Spring's model-view-controller
 framework provides a clean separation between domain model code and web forms, and
 integrates with all the other features of the Spring Framework.
 
-The __Web-Struts__ module contains the support classes for integrating a classic Struts
-web tier within a Spring application. Note that this support is now deprecated as of
-Spring 3.0. Consider migrating your application to Struts 2.0 and its Spring integration
-or to a Spring MVC solution.
-
 The __Web-Portlet__ module provides the MVC implementation to be used in a portlet
 environment and mirrors the functionality of Web-Servlet module.
 
@@ -836,8 +831,8 @@ There have been several general improvements to the core IoC container:
   added via the `@Conditional` annotation. This is similar to `@Profile` but allow
   user-defined strategies to be developed.
 * Proxy classes no longer require a default constructor. Support is provided via the
-  http://code.google.com/p/objenesis/[objenesis] library which is now packaged __inline__
-  and shipped with Spring.
+  http://code.google.com/p/objenesis/[objenesis] library which is repackaged __inline__
+  and distributed as part of Spring.
 * The `@Lazy` annotation can now be used on injection points, as well as `@Bean`
   definitions.
 * The <<beans-java-bean-description,`@Description` annotation has been added>> for
@@ -1752,7 +1747,7 @@ __index is 0 based__.
 
 .[[beans-factory-ctor-arguments-name]]Constructor argument name
 --
-As of Spring 3.0 you can also use the constructor parameter name for value disambiguation:
+You can also use the constructor parameter name for value disambiguation:
 
 [source,xml,indent=0]
 [subs="verbatim,quotes"]
@@ -2345,7 +2340,7 @@ following elements:__
 
 [[beans-collection-elements-merging]]
 ====== Collection merging
-As of Spring 2.0, the container supports the __merging__ of collections. An application
+The Spring container also supports the __merging__ of collections. An application
 developer can define a parent-style `<list/>`, `<map/>`, `<set/>` or `<props/>` element,
 and have child-style `<list/>`, `<map/>`, `<set/>` or `<props/>` elements inherit and
 override values from the parent collection. That is, the child collection's values are
@@ -2497,10 +2492,10 @@ The above configuration is equivalent to the following Java code:
 The p-namespace enables you to use the `bean` element's attributes, instead of nested
 `<property/>` elements, to describe your property values and/or collaborating beans.
 
-Spring 2.0 and later supports extensible configuration formats <<xsd-config,with
-namespaces>>, which are based on an XML Schema definition. The `beans` configuration
-format discussed in this chapter is defined in an XML Schema document. However, the
-p-namespace is not defined in an XSD file and exists only in the core of Spring.
+Spring supports extensible configuration formats <<xsd-config,with namespaces>>, which are
+based on an XML Schema definition. The `beans` configuration format discussed in this
+chapter is defined in an XML Schema document. However, the p-namespace is not defined in
+an XSD file and exists only in the core of Spring.
 
 The following example shows two XML snippets that resolve to the same result: The first
 uses standard XML format and the second uses the p-namespace.
@@ -5672,12 +5667,12 @@ than using the traditional XML files. Take a look at the `@Configuration`, `@Bea
 [[beans-stereotype-annotations]]
 ==== @Component and further stereotype annotations
 
-In Spring 2.0 and later, the `@Repository` annotation is a marker for any class that
-fulfills the role or __stereotype__ (also known as Data Access Object or DAO) of a
-repository. Among the uses of this marker is the automatic translation of exceptions as
-described in <<orm-exception-translation>>.
+The `@Repository` annotation is a marker for any class that fulfills the role or
+__stereotype__ (also known as Data Access Object or DAO) of a repository. Among the uses
+of this marker is the automatic translation of exceptions as described in
+<<orm-exception-translation>>.
 
-Spring 2.5 introduces further stereotype annotations: `@Component`, `@Service`, and
+Spring provides further stereotype annotations: `@Component`, `@Service`, and
 `@Controller`. `@Component` is a generic stereotype for any Spring-managed component.
 `@Repository`, `@Service`, and `@Controller` are specializations of `@Component` for
 more specific use cases, for example, in the persistence, service, and presentation
@@ -8011,13 +8006,13 @@ the `contextConfigLocation` parameter just as the listener does.
 
 [[context-deploy-rar]]
 ==== Deploying a Spring ApplicationContext as a J2EE RAR file
-In Spring 2.5 and later, it is possible to deploy a Spring ApplicationContext as a RAR
-file, encapsulating the context and all of its required bean classes and library JARs in
-a J2EE RAR deployment unit. This is the equivalent of bootstrapping a standalone
-ApplicationContext, just hosted in J2EE environment, being able to access the J2EE
-servers facilities. RAR deployment is a more natural alternative to scenario of
-deploying a headless WAR file, in effect, a WAR file without any HTTP entry points that
-is used only for bootstrapping a Spring ApplicationContext in a J2EE environment.
+It is possible to deploy a Spring ApplicationContext as a RAR file, encapsulating the
+context and all of its required bean classes and library JARs in a J2EE RAR deployment
+unit. This is the equivalent of bootstrapping a standalone ApplicationContext, just hosted
+in J2EE environment, being able to access the J2EE servers facilities. RAR deployment is a
+more natural alternative to scenario of deploying a headless WAR file, in effect, a WAR
+file without any HTTP entry points that is used only for bootstrapping a Spring
+ApplicationContext in a J2EE environment.
 
 RAR deployment is ideal for application contexts that do not need HTTP entry points but
 rather consist only of message endpoints and scheduled jobs. Beans in such a context can
@@ -8079,7 +8074,7 @@ Because the `ApplicationContext` includes all functionality of the `BeanFactory`
 generally recommended over the `BeanFactory`, except for a few situations such as in an
 `Applet` where memory consumption might be critical and a few extra kilobytes might make
 a difference. However, for most typical enterprise applications and systems, the
-`ApplicationContext` is what you will want to use. Spring 2.0 and later makes __heavy__
+`ApplicationContext` is what you will want to use. Spring makes __heavy__
 use of the <<beans-factory-extension-bpp, `BeanPostProcessor` extension point>> (to
 effect proxying and so on). If you use only a plain `BeanFactory`, a fair amount of
 support such as transactions and AOP will not take effect, at least not without some
@@ -9563,7 +9558,7 @@ registration code to be encapsulated in a class and then shared amongst as many
 
 
 [[core-convert]]
-=== Spring 3 Type Conversion
+=== Spring Type Conversion
 Spring 3 introduces a `core.convert` package that provides a general type conversion
 system. The system defines an SPI to implement type conversion logic, as well as an API
 to execute type conversions at runtime. Within a Spring container, this system can be
@@ -9849,7 +9844,7 @@ it like you would for any other bean:
 
 
 [[format]]
-=== Spring 3 Field Formatting
+=== Spring Field Formatting
 As discussed in the previous section, <<core-convert, `core.convert`>> is a
 general-purpose type conversion system. It provides a unified ConversionService API as
 well as a strongly-typed Converter SPI for implementing conversion logic from one type
@@ -10315,7 +10310,7 @@ For XML you should use the `'conversion-service'` attribute of the
 
 
 [[validation-beanvalidation]]
-=== Spring 3 Validation
+=== Spring Validation
 Spring 3 introduces several enhancements to its validation support. First, the JSR-303
 Bean Validation API is now fully supported. Second, when used programmatically, Spring's
 DataBinder can now validate objects as well as bind to them. Third, Spring MVC now has
@@ -12110,7 +12105,7 @@ enterprise Java applications that are amenable to AOP.
 Spring AOP will never strive to compete with AspectJ to provide a comprehensive AOP
 solution. We believe that both proxy-based frameworks like Spring AOP and full-blown
 frameworks such as AspectJ are valuable, and that they are complementary, rather than in
-competition. Spring 2.0 seamlessly integrates Spring AOP and IoC with AspectJ, to enable
+competition. Spring seamlessly integrates Spring AOP and IoC with AspectJ, to enable
 all uses of AOP to be catered for within a consistent Spring-based application
 architecture. This integration does not affect the Spring AOP API or the AOP Alliance
 API: Spring AOP remains backward-compatible. See <<aop-api,the following chapter>> for a
@@ -12166,7 +12161,7 @@ implementation detail actually means.
 @AspectJ refers to a style of declaring aspects as regular Java classes annotated with
 Java 5 annotations. The @AspectJ style was introduced by the
 http://www.eclipse.org/aspectj[AspectJ project] as part of the AspectJ 5 release. Spring
-2.0 interprets the same annotations as AspectJ 5, using a library supplied by AspectJ
+interprets the same annotations as AspectJ 5, using a library supplied by AspectJ
 for pointcut parsing and matching. The AOP runtime is still pure Spring AOP though, and
 there is no dependency on the AspectJ compiler or weaver.
 
@@ -13032,7 +13027,7 @@ legal.
 
 [[aop-ataspectj-advice-params]]
 ===== Advice parameters
-Spring 2.0 offers fully typed advice - meaning that you declare the parameters you need
+Spring offers fully typed advice - meaning that you declare the parameters you need
 in the advice signature (as we saw for the returning and throwing examples above) rather
 than work with `Object[]` arrays all the time. We'll see how to make argument and other
 contextual values available to the advice body in a moment. First let's take a look at
@@ -13499,7 +13494,7 @@ expression so that only `@Idempotent` operations match:
 
 [[aop-schema]]
 === Schema-based AOP support
-If you are unable to use Java 5, or simply prefer an XML-based format, then Spring 2.0
+If you are unable to use Java 5, or simply prefer an XML-based format, then Spring
 also offers support for defining aspects using the new "aop" namespace tags. The exact
 same pointcut expressions and advice kinds are supported as when using the @AspectJ
 style, hence in this section we will focus on the new __syntax__ and refer the reader to
@@ -14110,9 +14105,9 @@ represented by a bean, and must implement one of the advice interfaces described
 <<aop-api-advice-types>>. Advisors can take advantage of AspectJ pointcut expressions
 though.
 
-Spring 2.0 supports the advisor concept with the `<aop:advisor>` element. You will most
+Spring supports the advisor concept with the `<aop:advisor>` element. You will most
 commonly see it used in conjunction with transactional advice, which also has its own
-namespace support in Spring 2.0. Here's how it looks:
+namespace support in Spring. Here's how it looks:
 
 [source,xml,indent=0]
 [subs="verbatim,quotes"]
@@ -15569,14 +15564,14 @@ explored (in some depth).
 
 [[aop-api-introduction]]
 === Introduction
-The previous chapter described the Spring 2.0 and later version's support for AOP using
+The previous chapter described the Spring's support for AOP using
 @AspectJ and schema-based aspect definitions. In this chapter we discuss the lower-level
 Spring AOP APIs and the AOP support used in Spring 1.2 applications. For new
 applications, we recommend the use of the Spring 2.0 and later AOP support described in
 the previous chapter, but when working with existing applications, or when reading books
-and articles, you may come across Spring 1.2 style examples. Spring 3.0 is backwards
+and articles, you may come across Spring 1.2 style examples. Spring 4.0 is backwards
 compatible with Spring 1.2 and everything described in this chapter is fully supported
-in Spring 3.0.
+in Spring 4.0.
 
 
 
@@ -16286,7 +16281,7 @@ it to create objects of a different type.)
 
 [NOTE]
 ====
-The Spring 2.0 AOP support also uses factory beans under the covers.
+The Spring AOP support also uses factory beans under the covers.
 ====
 
 The basic way to create an AOP proxy in Spring is to use the
@@ -21221,7 +21216,7 @@ using an advisor. The result indicates that at the execution of a `fooServiceOpe
 the advice defined by `txAdvice` will be run.
 
 The expression defined within the `<aop:pointcut/>` element is an AspectJ pointcut
-expression; see <<aop>> for more details on pointcut expressions in Spring 2.0.
+expression; see <<aop>> for more details on pointcut expressions in Spring.
 
 A common requirement is to make an entire service layer transactional. The best way to
 do this is simply to change the pointcut expression to match any operation in your
@@ -25517,7 +25512,7 @@ chapter will then cover the other ORM technologies, showing briefer examples the
 
 [NOTE]
 ====
-As of Spring 3.0, Spring requires Hibernate 3.2 or later.
+As of Spring 4.0, Spring requires Hibernate 3.6 or later.
 ====
 
 
@@ -37524,7 +37519,7 @@ future-proof web services.
 Spring provides a convenient base class for JAX-WS servlet endpoint implementations -
 `SpringBeanAutowiringSupport`. To expose our `AccountService` we extend Spring's
 `SpringBeanAutowiringSupport` class and implement our business logic here, usually
-delegating the call to the business layer. We'll simply use Spring 2.5's `@Autowired`
+delegating the call to the business layer. We'll simply use Spring's `@Autowired`
 annotation for expressing such dependencies on Spring-managed beans.
 
 [source,java,indent=0]
@@ -38642,7 +38637,7 @@ lookups simply provides consistent and more explicit EJB access configuration.
 [[ejb-implementation-ejb3]]
 ==== EJB 3 injection interceptor
 For EJB 3 Session Beans and Message-Driven Beans, Spring provides a convenient
-interceptor that resolves Spring 2.5's `@Autowired` annotation in the EJB component
+interceptor that resolves Spring's `@Autowired` annotation in the EJB component
 class: `org.springframework.ejb.interceptor.SpringBeanAutowiringInterceptor`. This
 interceptor can be applied through an `@Interceptors` annotation in the EJB component
 class, or through an `interceptor-binding` XML element in the EJB deployment descriptor.
@@ -44397,7 +44392,7 @@ will want to do with this callback, and you can see an example of doing that bel
 A full discussion of meta-programming in Groovy is beyond the scope of the Spring
 reference manual. Consult the relevant section of the Groovy reference manual, or do a
 search online: there are plenty of articles concerning this topic. Actually making use
-of a `GroovyObjectCustomizer` is easy if you are using the Spring 2.0 namespace support.
+of a `GroovyObjectCustomizer` is easy if you are using the Spring namespace support.
 
 [source,xml,indent=0]
 [subs="verbatim,quotes"]
@@ -44411,7 +44406,7 @@ of a `GroovyObjectCustomizer` is easy if you are using the Spring 2.0 namespace 
 			customizer-ref="tracingCustomizer" />
 ----
 
-If you are not using the Spring 2.0 namespace support, you can still use the
+If you are not using the Spring namespace support, you can still use the
 `GroovyObjectCustomizer` functionality.
 
 [source,xml,indent=0]
