--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -820,9 +820,10 @@ __TODO: Rossen to review and add links__
 === Core Container Improvements
 There have been several general improvements to the core IoC container:
 
-* Spring now treats __generic types__ as a form of __qualifier__ when injecting Beans. For
-  example, if you are using a Spring Data `Repository` you can now easily inject specific
-  implementations: `@Autowired Repository<Customer> customerRepository`.
+* Spring now treats <<beans-generics-as-qualifiers,__generic types__ as a form of
+  __qualifier__>> when injecting Beans. For example, if you are using a Spring Data
+  `Repository` you can now easily inject specific implementations:
+  `@Autowired Repository<Customer> customerRepository`.
 * If you use Spring's meta-annotation support, you can now develop custom annotations that
   <<beans-meta-annotations,expose specific attributes from the source annotation>>.
 * Beans can now be `Ordered` when they are injected into lists and arrays. Both the
@@ -5471,6 +5472,59 @@ the following example.
 
 	</beans>
 ----
+
+
+
+[[beans-generics-as-qualifiers]]
+==== Using generics as autowiring qualifiers
+In addition to the `@Qualifier` annotation, it is also possible to use Java generic types
+as an implicit form of qualification. For example, suppose you have the following
+configuration:
+
+[source,java,indent=0]
+[subs="verbatim,quotes"]
+----
+	@Configuration
+	public class MyConfiguration {
+
+		@Bean
+		public StringStore stringStore() {
+			return new StringStore();
+		}
+
+		@Bean
+		public IntegerStore integerStore() {
+			return new IntegerStore();
+		}
+
+	}
+----
+
+Assuming that beans above implement a generic interface, i.e. `Store<String>` and
+`Store<Interface>`, you can `@Autowire` the `Store` interface and the __generic__ will
+be used as a qualifier:
+
+[source,java,indent=0]
+[subs="verbatim,quotes"]
+----
+	@Autowired
+	private Store<String> s1; // <String> qualifier, injects the stringStore bean
+
+	@Autowired
+	private Store<Integer> s2; // <Integer> qualifier, injects the integerStore bean
+----
+
+Generic qualifiers also apply when autowiring Lists, Maps and Arrays:
+
+[source,java,indent=0]
+[subs="verbatim,quotes"]
+----
+	// Inject all Store beans as long as they have an <Integer> generic
+	// Store<String> beans will not appear in this list
+	@Autowired
+	private List<Store<Integer>> s;
+----
+
 
 
 
