--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -826,14 +826,15 @@ There have been several general improvements to the core IoC container:
   `@Autowired Repository<Customer> customerRepository`.
 * If you use Spring's meta-annotation support, you can now develop custom annotations that
   <<beans-meta-annotations,expose specific attributes from the source annotation>>.
-* Beans can now be `Ordered` when they are injected into lists and arrays. Both the
-  `@Ordered` annotation and `Ordered` interface are supported.
-* A generalized model for <<beans-java-conditional,conditionally loading beans>> has been
-  added via the `@Conditional` annotation. This is similar to `@Profile` but allow
+* Beans can now be `Ordered` when they are <<beans-autowired-annotation,autowired into
+  lists and arrays>>. Both the `@Ordered` annotation and `Ordered` interface are
+  supported.
+* A generalized model for <<beans-java-conditional,conditionally filtering beans>> has
+  been added via the `@Conditional` annotation. This is similar to `@Profile` but allow
   user-defined strategies to be developed.
-* Proxy classes no longer require a default constructor. Support is provided via the
-  http://code.google.com/p/objenesis/[objenesis] library which is repackaged __inline__
-  and distributed as part of Spring.
+* <<aop-pfb-proxy-types,CGLIB-based proxy classes>> no longer require a default
+  constructor. Support is provided via the http://code.google.com/p/objenesis/[objenesis]
+  library which is repackaged __inline__ and distributed as part of the Spring Framework.
 * The `@Lazy` annotation can now be used on injection points, as well as `@Bean`
   definitions.
 * The <<beans-java-bean-description,`@Description` annotation has been added>> for
@@ -5954,7 +5955,8 @@ this with the same `@Bean` annotation used to define bean metadata within
 	@Component
 	public class FactoryMethodComponent {
 
-		@Bean @Qualifier("public")
+		@Bean
+		@Qualifier("public")
 		public TestBean publicInstance() {
 			return new TestBean("publicInstance");
 		}
@@ -5971,9 +5973,17 @@ This class is a Spring component that has application-specific code contained in
 method referring to the method `publicInstance()`. The `@Bean` annotation identifies the
 factory method and other bean definition properties, such as a qualifier value through
 the `@Qualifier` annotation. Other method level annotations that can be specified are
-`@Scope`, `@Lazy`, and custom qualifier annotations. Autowired fields and methods are
-supported as previously discussed, with additional support for autowiring of `@Bean`
-methods:
+`@Scope`, `@Lazy`, and custom qualifier annotations.
+
+[TIP]
+====
+In addition to its role for component initialization, the `@Lazy` annotation may also be
+placed on injection points marked with `@Autowired` or `@Inject`. In this context, it
+leads to the injection of a lazy-resolution proxy.
+====
+
+Autowired fields and methods are supported as previously discussed, with additional
+support for autowiring of `@Bean` methods:
 
 [source,java,indent=0]
 [subs="verbatim,quotes"]
