--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -812,6 +812,8 @@ fallback support.
 The new `@MessageMapping` annotation allows you to easily integrate messaging into your
 existing Spring MVC `@Controller` classes.
 
+See <<websocket>> for more details.
+
 __TODO: Rossen to review and add links__
 
 
@@ -37051,12 +37053,18 @@ Once you have deployed your portlet, review the resulting `web.xml` file for san
 Some older portals have been known to corrupt the definition of the
 `ViewRendererServlet`, thus breaking the rendering of your portlets.
 
+
+
+
+
 [[websocket]]
 == WebSocket Support
 
+
+
+
 [[websocket-intro]]
 === Introduction
-
 The WebSocket protocol http://tools.ietf.org/html/rfc6455[RFC 6455] defines an important
 new capability for web applications: full-duplex, two-way communication between client
 and server. It is an exciting new capability on the heels of a long history of
@@ -37075,9 +37083,10 @@ Spring Framework 4 includes a new `spring-websocket` module with comprehensive
 WebSocket support. It is compatible with the Java WebSocket API standard (JSR-356)
 and also provides additional value-add as explained in the rest of the introduction.
 
+
+
 [[websocket-into-fallback-options]]
 ==== Fallback Options
-
 An important challenge to adoption is the lack of support for WebSocket in some
 browsers. Notably the first Internet Explorer version to support WebSocket is
 version 10 (see http://caniuse.com/websockets for support by browser versions).
@@ -37089,14 +37098,15 @@ http://www.infoq.com/articles/Web-Sockets-Proxy-Servers[this article].
 
 Therefore to build a WebSocket application today, fallback options are required
 to simulate the WebSocket API where necessary.
-Spring Framework 4 provides such transparent fallback
+Spring Framework provides such transparent fallback
 options based on the https://github.com/sockjs/sockjs-protocol[SockJS protocol].
 These options can be enabled through configuration and do not require
 modifying the application otherwise.
 
+
+
 [[websocket-intro-architecture]]
 ==== Messaging Architecture
-
 Aside from short-to-midterm adoption challenges using WebSocket
 brings up important design considerations that are important to recognize
 early on especially in contrast to what we know about building web applications today.
@@ -37120,9 +37130,10 @@ a foundation for such a messaging architecture. The module also includes a
 set of annotations for mapping messages to methods similar to the Spring MVC
 annotation based programming model.
 
+
+
 [[websocket-intro-sub-protocol]]
 ==== Sub-Protocol Support
-
 WebSocket does imply a messaging architecture but does not mandate the
 use of any specific messaging protocol. It is a very thin layer over TCP
 that transforms a stream of bytes into a stream of messages
@@ -37146,15 +37157,16 @@ even if not used, applications will still need to choose a message
 format that both client and server can understand. That format can be custom,
 framework-specific, or a standard messaging protocol.
 
-Spring Framework 4 provides support for using
+Spring Framework provides support for using
 http://stomp.github.io/index.html[STOMP] -- a simple, messaging protocol
 originally created for use in scripting languages with frames inspired
 by HTTP. STOMP is widely support and well suited for use over
 WebSocket and over the web.
 
+
+
 [[websocket-intro-when-to-use]]
 ==== When To Use WebSocket?
-
 With all design considerations surrounding the use of WebSocket, it is
 reasonable to ask when is it appropriate to use?
 
@@ -37173,7 +37185,7 @@ few minutes to appear.
 
 Even in cases where latency is crucial, if the volume of messages is
 relatively low (e.g. monitoring network failures) the use of
-https://spring.io/blog/2012/05/08/spring-mvc-3-2-preview-techniques-for-real-time-updates[long polling]
+http://spring.io/blog/2012/05/08/spring-mvc-3-2-preview-techniques-for-real-time-updates[long polling]
 should be considered as a relatively simple alternative that
 works reliably and is comparable by efficiency (again assuming the volume of
 messages is relatively low).
@@ -37187,15 +37199,17 @@ that some functionality may be exposed over both WebSocket and as a REST API in
 order to provide clients with alternatives. Furthermore a REST API call may need
 to broadcast a message to interested clients connected via WebSocket.
 
-Spring Framework 4 allows `@Controller` classes to have both
+Spring Framework allows `@Controller` classes to have both
 HTTP request handling and WebSocket message handling methods.
 Furthermore, a Spring MVC request handling method, or any application
 method for that matter, can easily broadcast a message to all interested
 WebSocket clients or to a specific user.
 
+
+
+
 [[websocket-server]]
 === WebSocket Server
-
 The Spring Framework provides a WebSocket API designed to adapt to various WebSocket engines.
 For example it runs on JSR-356 runtimes such as Tomcat (7.0.47+) and Glassfish (4.0+) but
 can also adapt to other WebSocket runtimes such as the Jetty (9.0+) native WebSocket support.
@@ -37214,9 +37228,10 @@ when using HTTP. Nevertheless this section covers the details of using WebSocket
 directly.
 ====
 
+
+
 [[websocket-server-handler]]
 ==== Create and Configure a WebSocketHandler
-
 Creating a WebSocket server is as simple as implementing `WebSocketHandler` or more
 likely extending either `TextWebSocketHandler` or `BinaryWebSocketHandler`:
 
@@ -37237,8 +37252,8 @@ likely extending either `TextWebSocketHandler` or `BinaryWebSocketHandler`:
 	}
 ----
 
-There is dedicated WebSocket Java config and XML namespace support for mapping the above WebSocket
-handler at a specific URL:
+There is dedicated WebSocket Java-config and XML namespace support for mapping the above
+WebSocket handler at a specific URL:
 
 [source,java,indent=0]
 [subs="verbatim,quotes"]
@@ -37260,6 +37275,7 @@ handler at a specific URL:
 		public WebSocketHandler myHandler() {
 			return new MyHandler();
 		}
+
 	}
 ----
 
@@ -37292,9 +37308,10 @@ support does not depend on Spring MVC. It is relatively simple to integrate a `W
 into other HTTP serving environments with the help of
 https://github.com/spring-projects/spring-framework/blob/master/spring-websocket/src/main/java/org/springframework/web/socket/server/support/WebSocketHttpRequestHandler.java[WebSocketHttpRequestHandler].
 
+
+
 [[websocket-server-handshake]]
 ==== Customizing the WebSocket Handshake
-
 The easiest way to customize the initial HTTP WebSocket handshake request is through
 a `HandshakeInterceptor`, which exposes before and after the handshake methods.
 Such an interceptor can be used to preclude the handshake or to make any attributes
@@ -37313,6 +37330,7 @@ for passing HTTP session attributes to the WebSocket session:
 			registry.addHandler(new MyHandler(), "/myHandler")
 				.addInterceptors(new HttpSessionHandshakeInterceptor());
 		}
+
 	}
 ----
 
@@ -37351,19 +37369,21 @@ adapt to a WebSocket server engine and version that is not yet supported
 Both the Java config and XML namespace make it possible to configure a custom
 `HandshakeHandler`.
 
+
+
 [[websocket-server-decorators]]
 ==== WebSocketHandler Decoration
-
 Spring provides a `WebSocketHandlerDecorator` base class that can be used to decorate
 a `WebSocketHandler` with additional behavior. Logging and exception handling
 implementations are provided and added by default when using the WebSocket Java config
 or XML namespace. The `ExceptionWebSocketHandlerDecorator` catches all uncaught
 exceptions arising from any WebSocketHandler method and closes the WebSocket
-session with status 1011 that indicates a server error.
+session with status `1011` that indicates a server error.
+
+
 
 [[websocket-server-deployment]]
 ==== Deployment Considerations
-
 The Spring WebSocket API is easy to integrate into a Spring MVC application where
 the `DispatcherServlet` serves both HTTP WebSocket handshake as well as other
 HTTP requests. It is also easy to integrate into other HTTP processing scenarios
@@ -37437,17 +37457,20 @@ Java initialization API, if required:
 	</web-app>
 ----
 
+
+
+
 [[websocket-fallback]]
 === Fallback Options
-
 As explained in the <<websocket-into-fallback-options,introduction>> WebSocket is not
 supported in all browsers yet or may be precluded by restrictive network proxies.
 This is why Spring provides fallback options that emulate the WebSocket API as close
 as possible based on the https://github.com/sockjs/sockjs-protocol[SockJS protocol].
 
+
+
 [[websocket-fallback-sockjs-enable]]
 ==== Enable SockJS
-
 SockJS is easy to enable through a configuration:
 
 [source,java,indent=0]
@@ -37466,6 +37489,7 @@ SockJS is easy to enable through a configuration:
 		public WebSocketHandler myHandler() {
 			return new MyHandler();
 		}
+
 	}
 ----
 
@@ -37507,9 +37531,10 @@ https://github.com/sockjs/sockjs-client[sockjs-client] page and the list of
 transport types supported by browser. The client also provides several
 configuration options, for example to specify which transports to include.
 
+
+
 [[websocket-fallback-sockjs-explained]]
 ==== How SockJS Works
-
 An in-depth description of how SockJS works is beyond the scope of this document.
 This section summarizes a few key facts to aid with understanding.
 The SockJS protocol itself is defined in a
@@ -37544,9 +37569,10 @@ array prepended with the letter "a" (e.g. +a["message1","message2"]+).
 By default the server sends a heartbeat frame every 25 seconds to keep proxies
 and loadbalancers from timing out the connection.
 
+
+
 [[websocket-fallback-sockjs-spring]]
 ==== Spring's SockJS Support
-
 In the Spring Framework, server-side support for the SockJS protocol is provided through a
 hierarchy of classes that implement the `SockJsService` interface while
 `SockJsHttpRequestHandler` integrates the service into HTTP request processing.
@@ -37565,6 +37591,9 @@ to the response at which point the SockJS session will be closed. Since the
 SockJsService sends a heartbeat every 25 seconds, typically a disconnected
 client will be detected within that time period.
 ====
+
+
+
 
 [[websocket-stomp]]
 === STOMP Messaging
